LLM addition - Add: Functionality to use real LLM, not just a mock
Infra
- Update / add makefile commands

Synthetic data loader
- Bug fix: Illegal characters in Python file; wouldn't run

DB service
- Bug fix: Unrecognized settings (env vars)

Chat service
- Bug fix: Unrecognized settings (env vars)

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,13 @@ DB_API_BASE_URL=http://localhost:8001
 
 # LLM settings
 LLM_MODE=mock
-# LLM_MODE=qwen  # Uncomment to use Qwen model (not yet implemented)
+# LLM_MODE=Qwen3-4B-Thinking-2507  # Uncomment to use Qwen model (requires model download)
+
+# Optional: Hugging Face token for model download (if model repo requires auth)
+# HUGGINGFACE_TOKEN=your_token_here
+
+# Optional: Custom model cache directory
+# MODEL_CACHE_DIR=/app/models
 
 # Vector DB settings
 VECTOR_MODE=mock
