--- a/service_chat/requirements.txt
+++ b/service_chat/requirements.txt
@@ -2,3 +2,8 @@ fastapi==0.121.3
 uvicorn==0.38.0
 httpx==0.28.1
 pydantic-settings==2.12.0
+
+# LLM dependencies (for LLM_MODE=qwen or Qwen3-4B-Thinking-2507)
+torch==2.5.1
+transformers==4.48.0
+huggingface-hub==0.27.0
