Docs & Notes - Moves, renames, and minor updates

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,10 @@
 # ======================
 # service_db_api
 # ======================
+MONGODB_URI_LOCAL=mongodb://localhost:27017
 MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI_CLOUD=
+#MONGODB_URI=
 MONGODB_DB_NAME=carepath
 API_PORT_DB_API=8001
 LOG_LEVEL=INFO
@@ -33,3 +36,17 @@ VECTOR_MODE=mock
 PINECONE_API_KEY=
 PINECONE_ENVIRONMENT=
 PINECONE_INDEX_NAME=carepath-documents
+
+# Deploy
+# - 1 var covers all cloud deployments: demo, test, prod, etc.
+## AWS
+### DEPLOY_AWS_PROFILE: An SSO profile
+DEPLOY_AWS_REGION=
+# DEPLOY_AWS_PROFILE: i thought it was genonaut-admin, but `cat ~/.aws/config` shows `[profile AdministratorAccess-513291423126]`
+DEPLOY_AWS_PROFILE=
+# # this is the number that comes at the end of `DEPLOY_AWS_PROFILE`. Can also verify this by doing: aws sts get-caller-identity --profile ${DEPLOY_AWS_PROFILE}
+DEPLOY_AWS_ACCOUNT_ID=
+DEPLOY_AWS_RDBMS_SERVICE_ROOT_PW=
+## Terraform
+DEPLOY_TF_STATE_BUCKET_NAME=
+DEPLOY_TF_DYNAMO_DB_TABLE=
