Deploy updates Now deploying successfully with this setup. - Add makefile commands (e.g. bootstrapping terraform, kubernetes ops) - Add docs - Update env var setup - Scaled down to 1 node, due to current AWS permission limitations (pending request to increase quota) - Changed region from us-east-1 to us-east-2, for incidental permissions reasons.
General
- Add notes/ issue: mcp.md

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,9 @@ test/_infra/test_genonaut_api.sqlite3
 
 # Infra
 celerybeat-schedule.db
+*.tfvars
+!*.tfvars.example
+.terraform/
+*.tfstate
+*.tfstate.backup
+backend.hcl
