--- a/service_db_api/Dockerfile
+++ b/service_db_api/Dockerfile
@@ -13,8 +13,8 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
+# Copy application code into service_db_api directory for proper module structure
+COPY . ./service_db_api/
 
 # Expose port
 EXPOSE 8001
