Hugging Face hosting option

--- a/.env.example
+++ b/.env.example
@@ -19,14 +19,19 @@ CHAT_API_PORT=8002
 DB_API_BASE_URL=http://localhost:8001
 
 # LLM settings
-LLM_MODE=mock
-# LLM_MODE=Qwen3-4B-Thinking-2507  # Uncomment to use Qwen model (requires model download)
-
-# Optional: Hugging Face token for model download (if model repo requires auth)
-# HUGGINGFACE_TOKEN=your_token_here
+DEFAULT_LLM_MODE=hf-qwen2.5  # HF Qwen2.5 via router (RECOMMENDED)
+# DEFAULT_LLM_MODE=mock  # Uncomment for testing without real LLM
+# DEFAULT_LLM_MODE=Qwen3-4B-Thinking-2507  # Uncomment to use local Qwen model (requires model download)
 
 # Optional: Custom model cache directory
 # MODEL_CACHE_DIR=/app/models
+
+# Hugging Face Inference API (for DEFAULT_LLM_MODE=hf-qwen2.5)
+HF_API_TOKEN=your_hf_token_here
+HF_QWEN_MODEL_ID=Qwen/Qwen2.5-7B-Instruct:together  # Router with Together AI provider
+HF_TIMEOUT_SECONDS=30
+HF_MAX_NEW_TOKENS=256
+HF_TEMPERATURE=0.7
 
 # Vector DB settings
 VECTOR_MODE=mock
